--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
         <h4 class="title">Coming Soon</h4>
         <p class="content">
           Kraken 3xplorer and Dragon Flyght. We’re looking to provide you a full service package from air, land, and to sea.
+          Welcome to the Matrix.
         </p>
       </div>
     </div>
